@@ -2,3 +2,124 @@ Name : Tank Akash Rameshbhai
 Reg. no : 22122055
 Email : tank.akash@msds.christuniversity.in
 Class : 2MSCDS(A)
+
+
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+1
+Enter your name: dfdfd
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+4
+Your list are: 
+dfdfd,
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+5
+Program will now wxit in 3.2.1..
+(base) aakash@Aakashs-MacBook-Air JAVA %  cd /Users/aakash/Documents/JAVA ; /usr/bin/env /Library/Java/JavaVirtualMachines/jdk-19.jdk/Con
+tents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/aakash/Library/Application\ Support/Code/User/wor
+kspaceStorage/7c647ef9b0d993ab53c874426fe197eb/redhat.java/jdt_ws/JAVA_285fe507/bin LAB_2 
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+1
+Enter your name: Akash
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+1
+Enter your name: Tank
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+1
+Enter your name: Rameshbhai
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+1 
+Enter your name: AAkash
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+2
+Which name your are searching?.
+AAkash
+Name is found at position 4
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+3
+Which name you want to delete. :
+AAkash
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+4
+Your list are: 
+Akash,Tank,Rameshbhai,
+-----------------------------
+ 1. Enter the name:    
+ 2. Search for a name: 
+ 3. Remove a name:    
+ 4. Print the name list  
+ 5. Exitt :(              
+-----------------------------
+Enter your choice: 
+5
+Program will now wxit in 3.2.1..
+(base) aakash@Aakashs-MacBook-Air JAVA % 
